--- a/source/layouts/_header.erb
+++ b/source/layouts/_header.erb
@@ -1,5 +1,10 @@
 <header>
-  <h1><%= link_to 'macapinlac.com', '/' %></h1>
+  <h1>
+    <% link_to '/', class: 'h-card' do %>
+      <span class="p-given-name">ritchie</span>
+      <span class="p-family-name">macapinlac</span>.com
+    <% end %>
+  </h1>
   <div id="main_navigation">
     <ul>
       <li><%= link_to 'Home', '/' %></li>
