--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -10,13 +10,14 @@ body {
   margin: 2em;
 }
 
+body header h1 {
+  a span.p-given-name {
+    display: none;
+  }
+}
 @media only screen and (min-width: 769px) {
   body header h1 {
     font-size: 2.7em;
-
-    a span.p-given-name {
-      display: none;
-    }
   }
   body main {
     width: 70%;
