--- a/source/layouts/_footer.erb
+++ b/source/layouts/_footer.erb
@@ -1,11 +1,25 @@
-<footer>
-  <% unless data.socials.sites.empty? %>
-    <h4>My socials</h4>
-    <ul>
-    <% data.socials.sites.each do |sites| %>
-      <li><%= link_to sites.name, sites.url %></li>
-    <% end %>
-    </ul>
-  <% end %>
+<footer class="site-footer">
+  <div class="footer-container">
+    <div class="footer-content">
+      <% unless data.socials.sites.empty? %>
+        <div class="footer-section">
+          <h4 class="footer-title">Connect</h4>
+          <ul class="social-links">
+            <% data.socials.sites.each do |site| %>
+              <li class="social-item">
+                <%= link_to site.name, site.url, class: 'social-link', target: '_blank', rel: 'noopener noreferrer' %>
+              </li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
+      
+      <div class="footer-section">
+        <p class="footer-copyright">
+          © <%= Time.now.year %> Ritchie Macapinlac. All rights reserved.
+        </p>
+      </div>
+    </div>
+  </div>
 </footer>
 
