Refactored blog layout and components for improved structure and styling. Replaced article partial with blog card partial for consistency. Enhanced homepage and tag page to utilize new blog card layout. Updated pagination settings in configuration for better article display. Improved README with development workflow and testing guidelines, including new script options for streamlined development tasks.

--- a/source/calendar.html.erb
+++ b/source/calendar.html.erb
@@ -14,7 +14,7 @@ pageable: true
 
 <div id="articles">
 <% page_articles.each_with_index do |article, i| %>
-  <%= partial 'layouts/_article', locals: {
+  <%= partial 'layouts/_blog_card', locals: {
     article: article,
     i: i
   } %>
