--- a/source/tag.html.erb
+++ b/source/tag.html.erb
@@ -6,7 +6,7 @@ per_page: 12
 
 <div id="articles">
 <% page_articles.each_with_index do |article, i| %>
-  <%= partial 'layouts/_article', locals: {
+  <%= partial 'layouts/_blog_card', locals: {
     article: article,
     i: i
   } %>
