--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,3 +1,7 @@
+---
+title: Home
+---
+
 <% if paginate && num_pages > 1 %>
   <p>Page <%= page_number %> of <%= num_pages %></p>
 
@@ -7,8 +11,8 @@
 <% end %>
 
 <div id="articles">
-<% page_articles.each_with_index do |article, i| %>
-  <%= partial 'layouts/_article', locals: {
+<% blog.articles.each_with_index do |article, i| %>
+  <%= partial 'layouts/_blog_card', locals: {
     article: article,
     i: i
   } %>
