Add series functionality with helper methods and proxy pages
Implemented series helper methods for article navigation and metadata, allowing for better organization of series content. Created a proxy page for the "Tesla Road Trip Adventure" series, including a description and status. Updated post layout to display series information and navigation links, enhancing user experience. Added CSS styles for series components to improve visual presentation.

--- a/source/layouts/_header.erb
+++ b/source/layouts/_header.erb
@@ -19,6 +19,9 @@
           <%= link_to 'Home', '/', class: 'nav-link' %>
         </li>
         <li class="nav-item">
+          <%= link_to 'Series', '/series', class: 'nav-link' %>
+        </li>
+        <li class="nav-item">
           <a href="/feed.xml" class="nav-link">RSS</a>
         </li>
         <li class="nav-item">
