--- a/source/layouts/_header.erb
+++ b/source/layouts/_header.erb
@@ -19,6 +19,9 @@
           <%= link_to 'Home', '/', class: 'nav-link' %>
         </li>
         <li class="nav-item">
+          <%= link_to 'Writing', '/writing', class: 'nav-link' %>
+        </li>
+        <li class="nav-item">
           <%= link_to 'Series', '/series', class: 'nav-link' %>
         </li>
         <li class="nav-item">
