--- a/source/layouts/post.erb
+++ b/source/layouts/post.erb
@@ -49,32 +49,32 @@
           <footer class="post-footer">
             <% if current_article.data.series %>
               <% series_nav = series_navigation(current_article) %>
-              <div class="post-series">
+              <div class="post-section">
                 <h3>Part of the "<%= series_nav[:series_name] %>" series</h3>
-                <div class="series-progress">
-                  <span class="series-progress-text">
+                <div class="progress-indicator">
+                  <span class="progress-text">
                     Part <%= series_nav[:current_index] + 1 %> of <%= series_nav[:total_posts] %>
                   </span>
-                  <div class="series-progress-bar">
-                    <div class="series-progress-fill" style="width: <%= ((series_nav[:current_index] + 1).to_f / series_nav[:total_posts]) * 100 %>%"></div>
+                  <div class="progress-bar">
+                    <div class="progress-fill" style="width: <%= ((series_nav[:current_index] + 1).to_f / series_nav[:total_posts]) * 100 %>%"></div>
                   </div>
                 </div>
                 
-                <div class="series-navigation">
+                <div class="section-navigation">
                   <% if series_nav[:previous_post] %>
                     <%= link_to "← Previous: #{series_nav[:previous_post].title}", 
                                 series_nav[:previous_post], 
-                                class: 'series-nav-link series-nav-prev' %>
+                                class: 'button button--secondary' %>
                   <% end %>
                   
                   <%= link_to "View All Posts in Series", 
                               "/series/#{series_nav[:series_name].downcase.gsub(/\s+/, '-')}.html", 
-                              class: 'series-nav-link series-nav-all' %>
+                              class: 'button button--secondary' %>
                   
                   <% if series_nav[:next_post] %>
                     <%= link_to "Next: #{series_nav[:next_post].title} →", 
                                 series_nav[:next_post], 
-                                class: 'series-nav-link series-nav-next' %>
+                                class: 'button button--secondary' %>
                   <% end %>
                 </div>
               </div>
@@ -84,13 +84,13 @@
               <% if current_article.article_previous %>
                 <%= link_to "← #{current_article.article_previous.title}", 
                             current_article.article_previous, 
-                            class: 'post-nav-link post-nav-prev' %>
+                            class: 'button button--secondary' %>
               <% end %>
               
               <% if current_article.article_next %>
                 <%= link_to "#{current_article.article_next.title} →", 
                             current_article.article_next, 
-                            class: 'post-nav-link post-nav-next' %>
+                            class: 'button button--secondary' %>
               <% end %>
             </div>
 
