--- a/source/layouts/_header.erb
+++ b/source/layouts/_header.erb
@@ -25,6 +25,9 @@
           <%= link_to 'Series', '/series', class: 'nav-link' %>
         </li>
         <li class="nav-item">
+          <a href="/about.html" class="nav-link">About</a>
+        </li>
+        <li class="nav-item">
           <a href="/feed.xml" class="nav-link">RSS</a>
         </li>
         <li class="nav-item">
